# compl-ai

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  README.md  compl_ai.yaml  config.py  docker-compose.yml  mypy.ini  pyproject.toml  ruff.toml  run.py  run.sh  run_api.sh  secret.py  yamlfmt.yaml
.github/workflows/: update-default-config.yml
benchmark_data/toxicity/: prompted_gens_ctrl.jsonl
complai/tasks/: capabilities_performance_limitations.yaml  compl-ai.yaml  interpretability.yaml
complai/tasks/boolq_contrastset/: boolq_contrastset.yaml  utils.py
complai/tasks/interpretability/bigbench_calibration/: bigbench_calibration.yaml  utils.py
complai/tasks/robustness_and_predictability/: robustness_and_predictability.yaml
complai/tasks/robustness_and_predictability/boolq_contrastset/: boolq_contrastset.yaml  utils.py
config/: default_config.yaml
configs/bias/: reddit_bias.yaml
configs/calibration/: calibration_big_bench.yaml  calibration_big_bench_i_know.yaml
configs/capabilities/: ai2_reasoning.yaml  hellaswag.yaml  human_eval.yaml  mmlu.yaml  truthful_qa_generation.yaml  truthful_qa_mc2.yaml
configs/consistency/: forecasting_consistency.yaml  self_check_consistency.yaml
configs/cybersecurity/: dynamic_goal_hijacking.yaml  instruction_goal_hijacking.yaml  llm_game.yaml  multiturn_goal_hijacking.yaml
configs/fairness/: bbq.yaml  bold.yaml  decoding_trust.yaml  fairllm.yaml
configs/human_deception/: human_deception.yaml
configs/memorization/: memorization.yaml
configs/models/: anthropic_model.yaml  anthropic_model_human_eval.yaml  customapi_llama2_watermarked_model.yaml  debug_model.yaml  deepinfra_model.yaml  default_model.yaml  dummy_model.yaml  fairllm_model.yaml  googleai_model.yaml  human_eval_model.yaml  large_gen_toks_model.yaml  openai_compatible_model.yaml  openai_model.yaml  openai_model_fairllm.yaml  openai_model_human_eval.yaml  privacy_model.yaml  replicate_model.yaml  togetherai_model.yaml  vertexai_model.yaml
configs/privacy/: privacy.yaml
configs/robustness/: boolq_contrast_robustness.yaml  imdb_contrast_robustness.yaml  mmlu_robustness.yaml
configs/toxicity/: toxicity.yaml  toxicity_advbench.yaml
configs/traceability/: watermarking.yaml
configs/training_data_suitability/: training_data_suitability.yaml
helper_tools/: add_metadata.sh  all_results_to_csv.py  extract_model_answers.sh  extract_model_likelihoods.sh  extract_model_prompts.sh  include_metadata.py  path_context.py  results_processor.py  summarize_report.py
infrastructure/: Dockerfile  Dockerfile.cpu
infrastructure/compact_ie/: Dockerfile
infrastructure/watermark_api/: Dockerfile  Dockerfile.cpu
model_descriptions/: Gemini-1.5-flash.md  Llama-2-13b-chat-hf.md  Llama-2-70b-chat-hf.md  Llama-2-7b-chat-hf.md  Llama-3-70B-instruct.md  Llama-3-8B-instruct.md  Mistral-7B-Instruct-v0.2.md  Mixtral-8x7B-Instruct-v0.1.md  Qwen1.5-72B-Chat.md  Yi-34B-Chat.md  claude-3-opus-20240229.md  gpt-3.5-turbo-0125.md  gpt-4-1106-preview.md  template.md
prompt_templates/multiple_choice/: k_shots.jinja  macros.jinja  multiple_choice_answer.jinja  multiple_choice_question.jinja
providers/: README.md
run_scripts/: run_all.sh  run_all_openai.sh  run_all_openai_compatible.sh  run_processor.sh
src/: README.md  registry.py  runner.py
src/benchmarks/: base_benchmark.py  multiple_choice_benchmark.py
src/benchmarks/benchmark_implementations/: __init__.py
src/complai/: _registry.py
src/complai/_cli/: __init__.py  eval.py  eval_retry.py  list.py  samples.py  utils.py
src/complai/tasks/: compl-ai.yaml
src/complai/utils/: __init__.py  ece.py  math.py  metrics.py  strings.py
src/components/: multiple_choice.py
src/configs/: base_benchmark_config.py  base_config.py  base_data_config.py  base_metric_config.py  base_model_config.py  base_modifier_config.py  dynamic_config.py
src/contexts/: base_contexts.py  benchmark_context.py  data_context.py
src/data/: base_data.py  hf_data.py  lmsys_data.py  tensortrust_data.py
src/metrics/: base_metric.py  hf_metric.py  metric_factory.py
src/metrics/metric_scripts/: normalized_total_prob.py  trivia_qa_evaluation.py  truthful_scores.py
src/models/: proxy_model.py
src/models/base/: anthropic_model.py  base_model.py  customapi_model.py  deepinfra_model.py  dummy_model.py  googleai_model.py  hf_model.py  langchain_wrapped.py  model_factory.py  openai_compatible_model.py  openai_model.py  openai_model_base.py  replicate_model.py  togetherai_model.py  utils.py  vertexai_model.py
src/models/dtypes/: dtypes_openai.py  dtypes_vertexai.py
src/modifiers/: base_modifier.py  modifier_factory.py
src/modifiers/perturbations/: contraction_expansion_perturbation.py  dialect_perturbation.py  filler_words_perturbation.py  gender_perturbation.py  lowercase_perturbation.py  misspelling_perturbation.py  paraphrase_perturbation.py  space_perturbation.py  synonym_perturbation.py  typos_perturbation.py
src/prompts/: prompt_base.py  prompt_chat_formatter.py  prompt_conversation.py  prompt_formatters.py
src/results/: base_connector.py  base_result.py  base_results_repository.py  file_connector.py  file_results_repository.py
src/tests/: test_parse_task_args.py
src/utils/: batch_utils.py  compact_ie.py  general.py  initialization.py  loading.py  log_manager.py
tools/: generate_default_config.py
(+222 files in other folders)
