[project]
name = "compl-ai"
version = "2.0.0"
description = "Compliance-centered evaluation framework for Generative AI models."
authors = [
    {name = "Compl-AI Team", email = "contact@compl-ai.org"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-evals",
    "inspect-ai==0.3.123",
    "openai>=1.90.0",
    "typer>=0.16.0",
    "vllm>=0.10.0",
    "fairlearn>=0.12.0",
    "scipy>=1.15.3",
    "datasets>=3.6.0",
    "regex>=2025.7.34",
    "polars>=1.32.2",
    "detoxify>=0.5.2",
]

[project.scripts]
complai = "complai._cli:main"

[project.urls]
Homepage = "https://compl-ai.org/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/complai"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.typos]
default.check-file = true
default.check-filename = true
default.extend-ignore-identifiers-re = []
files.extend-exclude = [
    "*.ipynb",  # Notebook cells are asigned a hash.
]

[tool.uv.sources]
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals" }
