[project]
name = "complai"
version = "2.0.0"
description = "Compliance-centered evaluation framework for Generative AI models."
authors = [
    {name = "Compl-AI Team", email = "contact@compl-ai.org"}
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inspect-evals[bbq,livebench,swe_bench]",
    "inspect-ai",
    "openai>=1.90.0",
    "typer>=0.19.0",
    "bidict>=0.23.1",
    "detoxify>=0.5.2",
    "gdown>=5.2.0",
    "gensim>=4.3.3",
    "llm-rules",
    "nltk>=3.9.1",
    "numpy>=1.26.4",
    "platformdirs>=4.3.8",
    "polars>=1.32.2",
    "scipy>=1.13.1",
    "torch>=2.7.1",
    "fairlearn>=0.12.0",
    "datasets>=3.6.0",
    "regex>=2025.7.34",
]

[project.optional-dependencies]
huggingface = ["torch", "transformers", "accelerate"]
vllm = ["vllm"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-cov>=4.1.0", "types-PyYAML"]

[project.entry-points.inspect_ai]
complai = "complai._registry"

[project.scripts]
complai = "complai._cli:main"

[project.urls]
Homepage = "https://compl-ai.org/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/complai"]

[tool.hatch.metadata]
allow-direct-references = true


[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
warn_redundant_casts = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
exclude = [
    "src/complai/tasks/self_check_consistency/compact_ie/",
]

[tool.typos]
default.check-file = true
default.check-filename = true
default.extend-ignore-identifiers-re = []
files.extend-exclude = [
    "*.ipynb",  # Notebook cells are asigned a hash.
    "src/complai/tasks/self_check_consistency/topics.py",
    "src/complai/tasks/self_check_consistency/compact_ie/",
]

[tool.uv.sources]
inspect-evals = { git = "https://github.com/UKGovernmentBEIS/inspect_evals" }
llm-rules = { git = "https://github.com/normster/llm_rules" }

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-rA --strict-markers --color=yes"
